Major enhancements and chatbot added.

--- a/index.html
+++ b/index.html
@@ -1,78 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="./src/assets/icon.ico"
-    />
-    <!-- href="/vite.svg" -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
 
-    <!-- Primary Meta Tags -->
-    <title>DMiraki</title>
-    <meta
-      name="title"
-      content="DMiraki - Digital Marketing Agency"
-    />
-    <meta
-      name="description"
-      content="DMiraki is a full-service digital marketing agency providing best-in-class services to big brands and small-to-medium sized businesses."
-    />
-    <!-- Open Graph / Facebook -->
-    <meta
-      property="og:type"
-      content="website"
-    />
-    <meta
-      property="og:url"
-      content="https://github.com/sidonweb/dmiraki"
-    />
-    <meta
-      property="og:title"
-      content="DMiraki - Digital Marketing Agency"
-    />
-    <meta
-      property="og:description"
-      content="DMiraki is a full-service digital marketing agency providing best-in-class services to big brands and small-to-medium sized businesses."
-    />
-    <meta
-      property="og:image"
-      content="https://res.cloudinary.com/dbzv9xfjp/image/upload/v1705560686/og-images/shadc-react_gketpd.jpg"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/icon.ico" />
+  <!-- href="/vite.svg" -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Twitter -->
-    <meta
-      name="twitter:card"
-      content="summary_large_image"
-    />
+  <!-- Global Meta Tags -->
+  <title>DMiraki | Elevate Your Brand with Digital Excellence</title>
+  <meta name="description"
+    content="DMiraki is your trusted digital partner for SEO, branding, web design, marketing strategies, and IT solutions. Transform your vision into impact.">
+  <meta name="keywords"
+    content="digital marketing, branding, SEO, web design, IT solutions, social media marketing, PPC, DMiraki">
+  <meta name="author" content="DMiraki">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
 
-    <meta
-      name="twitter:url"
-      content="https://github.com/sidonweb/dmiraki"
-    />
-    <meta
-      name="twitter:title"
-      content="DMiraki - Digital Marketing Agency"
-    />
-    <meta
-      name="twitter:description"
-      content="DMiraki is a full-service digital marketing agency providing best-in-class services to big brands and small-to-medium sized businesses."
-    />
-    <meta
-      name="twitter:image"
-      content="https://res.cloudinary.com/dbzv9xfjp/image/upload/v1705560686/og-images/shadc-react_gketpd.jpg"
-    />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script
-      type="module"
-      src="/src/main.tsx"
-    ></script>
-  </body>
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="DMiraki | Elevate Your Brand with Digital Excellence">
+  <meta property="og:description"
+    content="From stunning websites to high-converting marketing strategies, DMiraki is your all-in-one solution for digital success.">
+  <meta property="og:image" content="https://dmiraki.com/assets/og-image.jpg">
+  <meta property="og:url" content="https://dmiraki.com">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="DMiraki | Elevate Your Brand with Digital Excellence">
+  <meta name="twitter:description"
+    content="Your go-to digital marketing agency for high-performance websites, branding, and IT solutions.">
+  <meta name="twitter:image" content="https://dmiraki.com/assets/twitter-image.jpg">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="https://dmiraki.com/favicon.png">
+
+  <title>Our Services | DMiraki - Digital Marketing & IT Solutions</title>
+  <meta name="description"
+    content="Explore DMiraki's full suite of digital services, including SEO, web design, branding, paid ads, social media, and IT solutions.">
+  <meta name="keywords"
+    content="digital services, SEO, web development, branding, social media marketing, paid advertising, IT solutions">
+  <meta property="og:title" content="Our Services | DMiraki">
+  <meta property="og:description"
+    content="From SEO to IT solutions, discover how we help brands scale with tailored digital strategies.">
+  <meta property="og:url" content="https://dmiraki.com/services">
+  <meta property="og:image" content="https://dmiraki.com/assets/services.jpg">
+  <meta name="twitter:title" content="Our Services | DMiraki">
+  <meta name="twitter:description" content="Boost your brand with our digital marketing, web design, and IT solutions.">
+  <meta name="twitter:image" content="https://dmiraki.com/assets/services.jpg">
+
+  <title>About Us | DMiraki - Meet Your Digital Growth Partners</title>
+  <meta name="description"
+    content="DMiraki is a full-service digital marketing and IT solutions agency, dedicated to helping brands scale with data-driven strategies.">
+  <meta name="keywords"
+    content="about DMiraki, digital marketing agency, brand growth, company mission, digital strategy experts">
+  <meta property="og:title" content="About DMiraki | Who We Are & What We Do">
+  <meta property="og:description"
+    content="Learn about DMiraki's mission, values, and how we help businesses achieve digital success.">
+  <meta property="og:url" content="https://dmiraki.com/about">
+  <meta property="og:image" content="https://dmiraki.com/assets/about.jpg">
+  <meta name="twitter:title" content="About Us | DMiraki">
+  <meta name="twitter:description" content="Discover our journey and how we bring brands to life in the digital space.">
+  <meta name="twitter:image" content="https://dmiraki.com/assets/about.jpg">
+
+  <title>Client Testimonials | DMiraki - Real Stories, Real Results</title>
+  <meta name="description"
+    content="See how DMiraki has helped businesses like yours succeed with expert digital marketing, web development, and branding solutions.">
+  <meta name="keywords"
+    content="DMiraki testimonials, client reviews, digital marketing success stories, customer experiences">
+  <meta property="og:title" content="Client Testimonials | DMiraki">
+  <meta property="og:description"
+    content="Don't take our word for it—hear from our clients who have achieved real growth with DMiraki.">
+  <meta property="og:url" content="https://dmiraki.com/testimonials">
+  <meta property="og:image" content="https://dmiraki.com/assets/testimonials.jpg">
+  <meta name="twitter:title" content="Client Testimonials | DMiraki">
+  <meta name="twitter:description" content="See why businesses trust DMiraki to drive digital success.">
+  <meta name="twitter:image" content="https://dmiraki.com/assets/testimonials.jpg">
+
+  <title>Contact DMiraki | Let's Elevate Your Brand</title>
+  <meta name="description"
+    content="Got questions? Let's connect! Reach out to DMiraki for expert digital marketing, web design, and IT solutions.">
+  <meta name="keywords"
+    content="contact DMiraki, digital marketing consultation, business inquiries, talk to an expert">
+  <meta property="og:title" content="Contact DMiraki | Get in Touch">
+  <meta property="og:description" content="Looking for digital marketing or web solutions? Contact DMiraki today!">
+  <meta property="og:url" content="https://dmiraki.com/contact">
+  <meta property="og:image" content="https://dmiraki.com/assets/contact.jpg">
+  <meta name="twitter:title" content="Contact DMiraki | Let's Talk">
+  <meta name="twitter:description" content="Need expert digital solutions? DMiraki is just a message away.">
+  <meta name="twitter:image" content="https://dmiraki.com/assets/contact.jpg">
+
+  <!-- Canonical Tag -->
+  <link rel="canonical" href="https://dmiraki.com">
+
+  <!-- Schema Markup (Structured Data for Google SEO) -->
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "DMiraki",
+  "url": "https://dmiraki.com",
+  "logo": "https://dmiraki.com/assets/icon.png",
+  "description": "DMiraki is a full-service digital marketing and IT solutions agency helping businesses grow with tailored digital strategies.",
+  "sameAs": [
+    "https://www.facebook.com/dmiraki",
+    "https://www.instagram.com/dmiraki",
+    "https://www.linkedin.com/company/dmiraki"
+  ]
+}
+</script>
+
+</head>
+
+<body>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/67b6170cae5ce4190e0b7d6a/1ikfkk2nh';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
